hard-gists/9dad6c4ab0d8d7dbf3dc/run.log
=== Docker Run Log for 9dad6c4ab0d8d7dbf3dc ===
Started at: Mi 29. Okt 18:41:52 CET 2025

[2025-10-29 18:41:52] START: Running container for 9dad6c4ab0d8d7dbf3dc
[2025-10-29 18:41:53] SUCCESS: Container 5fe68852fba19c4b35971f770dfa42e554f4ef5a19322104e79834bcd502d922 started for 9dad6c4ab0d8d7dbf3dc
=== Container logs for 9dad6c4ab0d8d7dbf3dc ===
  File "/snippet.py", line 44
    print "Lowval: ", low_val
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9dad6c4ab0d8d7dbf3dc ===
[2025-10-29 18:41:55] INFO: Container 5fe68852fba19c4b35971f770dfa42e554f4ef5a19322104e79834bcd502d922 has stopped
